// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots InfiniteLoader basic list 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1 MuiGrid-spacing-xs-24-24"
    >
      <div
        className="MuiGrid-item-2 MuiGrid-grid-xs-12-40"
      >
        <div
          className="MuiPaper-root-97 MuiPaper-elevation2-101 MuiPaper-rounded-98"
        >
          <div
            className="MuiList-root-124 MuiList-padding-125"
          >
            <div
              style={
                Object {
                  "overflow": "visible",
                  "width": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "height": 400,
                    "overflow": "hidden",
                    "position": "relative",
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "WebkitOverflowScrolling": "touch",
                      "bottom": 0,
                      "left": 0,
                      "marginBottom": 0,
                      "marginRight": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                >
                  <div
                    aria-label="grid"
                    aria-readonly={true}
                    className="ReactVirtualized__Grid ReactVirtualized__List"
                    onScroll={[Function]}
                    role="grid"
                    style={
                      Object {
                        "WebkitOverflowScrolling": "touch",
                        "boxSizing": "border-box",
                        "direction": "ltr",
                        "height": 400,
                        "overflowX": false,
                        "overflowY": false,
                        "position": "relative",
                        "width": 0,
                        "willChange": "transform",
                      }
                    }
                    tabIndex={0}
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "height": 6,
                      "left": 2,
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "transition": "opacity 200ms",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "height": "100%",
                        "position": "relative",
                      }
                    }
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "top": 2,
                      "transition": "opacity 200ms",
                      "width": 6,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "position": "relative",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InfiniteLoader basic table 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-128 MuiGrid-spacing-xs-24-151"
    >
      <div
        className="MuiGrid-item-129 MuiGrid-grid-xs-12-167"
      >
        <div
          className="MuiPaper-root-224 MuiPaper-elevation2-228 MuiPaper-rounded-225"
        >
          <div
            className="MuiTable-root-251"
          >
            <div
              className="MuiTableHead-root-253 Component-root-252"
            >
              <div
                className="MuiTableRow-root-259 Component-root-254 MuiTableRow-head-262 Component-head-257"
              >
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-272 InnerTableCell-root-264 MuiTableCell-head-273 InnerTableCell-head-265"
                  scope="col"
                >
                  Index
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-272 InnerTableCell-root-264 MuiTableCell-head-273 InnerTableCell-head-265"
                  scope="col"
                >
                  Title
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root-272 InnerTableCell-root-264 MuiTableCell-head-273 InnerTableCell-head-265"
                  scope="col"
                >
                  Timestamp
                </div>
              </div>
            </div>
            <div
              style={
                Object {
                  "overflow": "visible",
                  "width": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "height": 400,
                    "overflow": "hidden",
                    "position": "relative",
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "WebkitOverflowScrolling": "touch",
                      "bottom": 0,
                      "left": 0,
                      "marginBottom": 0,
                      "marginRight": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                >
                  <div
                    aria-label="grid"
                    aria-readonly={true}
                    className="ReactVirtualized__Grid ReactVirtualized__List InnerTableBody-root-280"
                    onScroll={[Function]}
                    role="grid"
                    style={
                      Object {
                        "WebkitOverflowScrolling": "touch",
                        "boxSizing": "border-box",
                        "direction": "ltr",
                        "height": 400,
                        "overflowX": false,
                        "overflowY": false,
                        "position": "relative",
                        "width": 0,
                        "willChange": "transform",
                      }
                    }
                    tabIndex={0}
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "height": 6,
                      "left": 2,
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "transition": "opacity 200ms",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "height": "100%",
                        "position": "relative",
                      }
                    }
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "top": 2,
                      "transition": "opacity 200ms",
                      "width": 6,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "position": "relative",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-281 MuiGrid-spacing-xs-24-304"
    >
      <div
        className="MuiDrawer-docked-377"
      >
        <div
          className="MuiPaper-root-388 MuiPaper-elevation0-390 MuiDrawer-paper-378 MuiDrawer-paperAnchorLeft-379 MuiDrawer-paperAnchorDockedLeft-383"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root-425 MuiList-padding-426 SideMenu-root-416 Component-flexed-415"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-417"
            />
            <div
              className="MuiButtonBase-root-439 MuiListItem-root-429 MuiListItem-default-432 MuiListItem-gutters-436 SideMenu-listItemGutters-419 MuiListItem-button-437 SideMenu-listItem-418"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-443 MuiListItemIcon-root-442"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-449 SideMenu-listItemText-421"
              >
                <span
                  className="MuiTypography-root-455 MuiTypography-subheading-462 MuiListItemText-primary-452 SideMenu-listItemPrimary-420"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-479"
              />
            </div>
            <div
              className="MuiButtonBase-root-439 MuiListItem-root-429 MuiListItem-default-432 MuiListItem-gutters-436 SideMenu-listItemGutters-419 MuiListItem-button-437 SideMenu-listItem-418"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-443 MuiListItemIcon-root-442"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-449 SideMenu-listItemText-421"
              >
                <span
                  className="MuiTypography-root-455 MuiTypography-subheading-462 MuiListItemText-primary-452 SideMenu-listItemPrimary-420"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-479"
              />
            </div>
            <div
              className="MuiButtonBase-root-439 MuiListItem-root-429 MuiListItem-default-432 MuiListItem-gutters-436 SideMenu-listItemGutters-419 MuiListItem-button-437 SideMenu-listItem-418"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-443 MuiListItemIcon-root-442"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-449 SideMenu-listItemText-421"
              >
                <span
                  className="MuiTypography-root-455 MuiTypography-subheading-462 MuiListItemText-primary-452 SideMenu-listItemPrimary-420"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-443"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </g>
              </svg>
              <span
                className="MuiTouchRipple-root-479"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu mini selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-699 MuiGrid-spacing-xs-24-722"
    >
      <div
        className="MuiDrawer-docked-795"
      >
        <div
          className="MuiPaper-root-806 MuiPaper-elevation0-808 MuiDrawer-paper-796 MuiDrawer-paperAnchorLeft-797 MuiDrawer-paperAnchorDockedLeft-801"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root-843 MuiList-padding-844 SideMenu-root-834 Component-flexed-833"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 80,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-835"
            />
            <div
              className="MuiButtonBase-root-857 MuiListItem-root-847 MuiListItem-default-850 MuiListItem-gutters-854 SideMenu-listItemGutters-837 MuiListItem-button-855 SideMenu-activeItem-842"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-861 MuiListItemIcon-root-860"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-867 SideMenu-listItemText-839 SideMenu-listItemHidden-840"
              >
                <span
                  className="MuiTypography-root-873 MuiTypography-subheading-880 MuiListItemText-primary-870 SideMenu-listItemPrimary-838"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-897"
              />
            </div>
            <div
              className="MuiButtonBase-root-857 MuiListItem-root-847 MuiListItem-default-850 MuiListItem-gutters-854 SideMenu-listItemGutters-837 MuiListItem-button-855 SideMenu-listItem-836"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-861 MuiListItemIcon-root-860"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-867 SideMenu-listItemText-839 SideMenu-listItemHidden-840"
              >
                <span
                  className="MuiTypography-root-873 MuiTypography-subheading-880 MuiListItemText-primary-870 SideMenu-listItemPrimary-838"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-897"
              />
            </div>
            <div
              className="MuiButtonBase-root-857 MuiListItem-root-847 MuiListItem-default-850 MuiListItem-gutters-854 SideMenu-listItemGutters-837 MuiListItem-button-855 SideMenu-listItem-836"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-861 MuiListItemIcon-root-860"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-867 SideMenu-listItemText-839 SideMenu-listItemHidden-840"
              >
                <span
                  className="MuiTypography-root-873 MuiTypography-subheading-880 MuiListItemText-primary-870 SideMenu-listItemPrimary-838"
                >
                  Theme
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-897"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-490 MuiGrid-spacing-xs-24-513"
    >
      <div
        className="MuiDrawer-docked-586"
      >
        <div
          className="MuiPaper-root-597 MuiPaper-elevation0-599 MuiDrawer-paper-587 MuiDrawer-paperAnchorLeft-588 MuiDrawer-paperAnchorDockedLeft-592"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root-634 MuiList-padding-635 SideMenu-root-625 Component-flexed-624"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-626"
            />
            <div
              className="MuiButtonBase-root-648 MuiListItem-root-638 MuiListItem-default-641 MuiListItem-gutters-645 SideMenu-listItemGutters-628 MuiListItem-button-646 SideMenu-activeItem-633"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-652 MuiListItemIcon-root-651"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-658 SideMenu-listItemText-630"
              >
                <span
                  className="MuiTypography-root-664 MuiTypography-subheading-671 MuiListItemText-primary-661 SideMenu-listItemPrimary-629"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-688"
              />
            </div>
            <div
              className="MuiButtonBase-root-648 MuiListItem-root-638 MuiListItem-default-641 MuiListItem-gutters-645 SideMenu-listItemGutters-628 MuiListItem-button-646 SideMenu-listItem-627"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-652 MuiListItemIcon-root-651"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-658 SideMenu-listItemText-630"
              >
                <span
                  className="MuiTypography-root-664 MuiTypography-subheading-671 MuiListItemText-primary-661 SideMenu-listItemPrimary-629"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-688"
              />
            </div>
            <div
              className="MuiButtonBase-root-648 MuiListItem-root-638 MuiListItem-default-641 MuiListItem-gutters-645 SideMenu-listItemGutters-628 MuiListItem-button-646 SideMenu-listItem-627"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-652 MuiListItemIcon-root-651"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-658 SideMenu-listItemText-630"
              >
                <span
                  className="MuiTypography-root-664 MuiTypography-subheading-671 MuiListItemText-primary-661 SideMenu-listItemPrimary-629"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-652"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </g>
              </svg>
              <span
                className="MuiTouchRipple-root-688"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1366 MuiGrid-spacing-xs-24-1389"
    >
      <div
        className="MuiGrid-item-1367 MuiGrid-grid-xs-12-1405"
      >
        <div
          className="MuiPaper-root-1467 MuiPaper-elevation2-1471 MuiPaper-rounded-1468 Widget-root-1462"
        >
          <h2
            className="MuiTypography-root-1494 MuiTypography-title-1500 MuiTypography-colorInherit-1513 MuiTypography-gutterBottom-1511"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1518 MuiGrid-spacing-xs-24-1541"
    >
      <div
        className="MuiGrid-item-1519 MuiGrid-grid-xs-12-1557"
      >
        <div
          className="MuiPaper-root-1619 MuiPaper-elevation2-1623 MuiPaper-rounded-1620 Widget-root-1614 Widget-featured-1618"
        >
          <h2
            className="MuiTypography-root-1646 MuiTypography-title-1652 MuiTypography-colorInherit-1665 MuiTypography-gutterBottom-1663"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1670 MuiGrid-spacing-xs-24-1693"
    >
      <div
        className="MuiGrid-item-1671 MuiGrid-grid-xs-12-1709"
      >
        <div
          className="MuiGrid-container-1670 MuiGrid-spacing-xs-24-1693"
        >
          <div
            className="MuiGrid-item-1671 MuiGrid-grid-xs-6-1703"
          >
            <div
              className="MuiPaper-root-1773 MuiPaper-elevation2-1777 MuiPaper-rounded-1774 Widget-root-1768 Widget-border-1769 Widget-border-top-1770"
            >
              <h2
                className="MuiTypography-root-1800 MuiTypography-title-1806 MuiTypography-colorInherit-1819 MuiTypography-gutterBottom-1817"
              >
                Border top
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1671 MuiGrid-grid-xs-6-1703"
          >
            <div
              className="MuiPaper-root-1773 MuiPaper-elevation2-1777 MuiPaper-rounded-1774 Widget-root-1768 Widget-border-1769 Widget-border-bottom-1771"
            >
              <h2
                className="MuiTypography-root-1800 MuiTypography-title-1806 MuiTypography-colorInherit-1819 MuiTypography-gutterBottom-1817"
              >
                Border bottom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1671 MuiGrid-grid-xs-6-1703"
          >
            <div
              className="MuiPaper-root-1773 MuiPaper-elevation2-1777 MuiPaper-rounded-1774 Widget-root-1768 Widget-border-1769 Component-customTopBorder-1766 Widget-border-top-1770"
            >
              <h2
                className="MuiTypography-root-1800 MuiTypography-title-1806 MuiTypography-colorInherit-1819 MuiTypography-gutterBottom-1817"
              >
                Border top custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1671 MuiGrid-grid-xs-6-1703"
          >
            <div
              className="MuiPaper-root-1773 MuiPaper-elevation2-1777 MuiPaper-rounded-1774 Widget-root-1768 Widget-border-1769 Component-customBotomBorder-1767 Widget-border-bottom-1771"
            >
              <h2
                className="MuiTypography-root-1800 MuiTypography-title-1806 MuiTypography-colorInherit-1819 MuiTypography-gutterBottom-1817"
              >
                Border bottom custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-908 MuiGrid-spacing-xs-24-931"
    >
      <div
        className="MuiGrid-item-909 MuiGrid-grid-xs-12-947"
      >
        <div
          className="MuiPaper-root-1009 MuiPaper-elevation2-1013 MuiPaper-rounded-1010 Widget-root-1004"
        >
          <h2
            className="MuiTypography-root-1036 MuiTypography-title-1042 MuiTypography-colorInherit-1055 MuiTypography-gutterBottom-1053"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1060 MuiGrid-spacing-xs-24-1083"
    >
      <div
        className="MuiGrid-item-1061 MuiGrid-grid-xs-12-1099"
      >
        <div
          className="MuiPaper-root-1161 MuiPaper-elevation2-1165 MuiPaper-rounded-1162 Widget-root-1156 Widget-featured-1160"
        >
          <h2
            className="MuiTypography-root-1188 MuiTypography-title-1194 MuiTypography-colorInherit-1207 MuiTypography-gutterBottom-1205"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1212 MuiGrid-spacing-xs-24-1235"
    >
      <div
        className="MuiGrid-item-1213 MuiGrid-grid-xs-12-1251"
      >
        <div
          className="MuiGrid-container-1212 MuiGrid-spacing-xs-24-1235"
        >
          <div
            className="MuiGrid-item-1213 MuiGrid-grid-xs-6-1245"
          >
            <div
              className="MuiPaper-root-1315 MuiPaper-elevation2-1319 MuiPaper-rounded-1316 Widget-root-1310 Widget-border-1311 Widget-border-top-1312"
            >
              <h2
                className="MuiTypography-root-1342 MuiTypography-title-1348 MuiTypography-colorInherit-1361 MuiTypography-gutterBottom-1359"
              >
                Border top
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1213 MuiGrid-grid-xs-6-1245"
          >
            <div
              className="MuiPaper-root-1315 MuiPaper-elevation2-1319 MuiPaper-rounded-1316 Widget-root-1310 Widget-border-1311 Widget-border-bottom-1313"
            >
              <h2
                className="MuiTypography-root-1342 MuiTypography-title-1348 MuiTypography-colorInherit-1361 MuiTypography-gutterBottom-1359"
              >
                Border bottom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1213 MuiGrid-grid-xs-6-1245"
          >
            <div
              className="MuiPaper-root-1315 MuiPaper-elevation2-1319 MuiPaper-rounded-1316 Widget-root-1310 Widget-border-1311 Component-customTopBorder-1308 Widget-border-top-1312"
            >
              <h2
                className="MuiTypography-root-1342 MuiTypography-title-1348 MuiTypography-colorInherit-1361 MuiTypography-gutterBottom-1359"
              >
                Border top custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1213 MuiGrid-grid-xs-6-1245"
          >
            <div
              className="MuiPaper-root-1315 MuiPaper-elevation2-1319 MuiPaper-rounded-1316 Widget-root-1310 Widget-border-1311 Component-customBotomBorder-1309 Widget-border-bottom-1313"
            >
              <h2
                className="MuiTypography-root-1342 MuiTypography-title-1348 MuiTypography-colorInherit-1361 MuiTypography-gutterBottom-1359"
              >
                Border bottom custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
